# keeper.raw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  architecture.md  export_face_model.py  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/keeper-core/: Cargo.toml
crates/keeper-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/keeper-ingest/: Cargo.toml
crates/keeper-ingest/src/: extractor.rs  lib.rs  scanner.rs
crates/keeper-ingest/tests/: scanner_test.rs
crates/keeper-stacker/: Cargo.toml
crates/keeper-stacker/src/: hasher.rs  lib.rs  stacker.rs
crates/keeper-stacker/tests/: phash_integration_test.rs
crates/keeper-vision/: Cargo.toml
crates/keeper-vision/src/: blink_detector.rs  face_detector.rs  focus_scorer.rs  lib.rs  pipeline.rs  preprocess.rs  runtime.rs
crates/keeper-vision/tests/: blink_detection_test.rs  face_detection_test.rs  focus_scoring_test.rs  onnx_smoke_test.rs  pipeline_test.rs
crates/keeper-xmp/: Cargo.toml
crates/keeper-xmp/src/: lib.rs
docs/: development.md  installation.md
models/: readme.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
test-data/: cull_manifest.json
