[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/keeper-core",
    "crates/keeper-ingest",
    "crates/keeper-stacker",
    "crates/keeper-vision",
    "crates/keeper-xmp",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.10"

[profile.dev.package."*"]
opt-level = 2